Fixes logo / nav alignment
Stops logo from pushing down navigation.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -83,6 +83,7 @@ header {
   overflow-y: hidden;
   padding: 15px 0px;
   z-index:2;
+  float: left;
 }
 
 @media @tablet {
